# SecretiveRendering

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  debugMessage.h  dllmain.cpp  hooking.cpp  hooking.h
SecretiveRendering/: dllmain.h  findpattern.h
SecretiveRendering/Rendering/: basicHook.cpp  basicHook.h
Steam-overlay-abusion/: debugMessage.h  dllmain.h
Steam-overlay-abusion/Rendering/: basicHook.cpp  imguiHook.cpp  imguiHook.h
