cmake_minimum_required(VERSION 3.16)
project(Steam-overlay-abusing)

set(CMAKE_CXX_STANDARD 17)

#Directx9
include_directories($ENV{DXSDK_DIR}/Include)
link_directories($ENV{DXSDK_DIR}/Lib/x86)

FILE(GLOB_RECURSE MAIN_SOURCES CONFIGURE_DEPENDS ${CMAKE_CURRENT_LIST_DIR}/*.cpp)
FILE(GLOB_RECURSE MAIN_HEADERS CONFIGURE_DEPENDS ${CMAKE_CURRENT_LIST_DIR}/*.h)

#Minhook
include_directories(${CMAKE_CURRENT_LIST_DIR}/minhook/include)
FILE(GLOB_RECURSE MINHOOK_SOURCE CONFIGURE_DEPENDS ${CMAKE_CURRENT_LIST_DIR}/minhook/src/*.c)
FILE(GLOB_RECURSE MINHOOK_HEADER CONFIGURE_DEPENDS ${CMAKE_CURRENT_LIST_DIR}/minhook/src/*.h)
FILE(GLOB_RECURSE MINHOOK_HDE_SOURCE CONFIGURE_DEPENDS ${CMAKE_CURRENT_LIST_DIR}/minhook/src/hde/*.c)
FILE(GLOB_RECURSE MINHOOK_HDE_HEADER CONFIGURE_DEPENDS ${CMAKE_CURRENT_LIST_DIR}/minhook/src/hde/*.h)

add_library(${PROJECT_NAME} SHARED ${MAIN_SOURCES} ${MAIN_HEADERS} ${MINHOOK_SOURCE} ${MINHOOK_HEADER} ${MINHOOK_HDE_SOURCE} ${MINHOOK_HDE_HEADER})

target_link_libraries(${PROJECT_NAME} d3d9 d3dx9)