cmake_minimum_required(VERSION 3.16)
project(Steam-overlay-abusing)

set(CMAKE_CXX_STANDARD 17)

#Directx9
include_directories($ENV{DXSDK_DIR}/Include)
link_directories($ENV{DXSDK_DIR}/Lib/x86)

FILE(GLOB_RECURSE MAIN_SOURCES CONFIGURE_DEPENDS ${CMAKE_CURRENT_LIST_DIR}/Steam-overlay-abusion/*.cpp)
FILE(GLOB_RECURSE MAIN_HEADERS CONFIGURE_DEPENDS ${CMAKE_CURRENT_LIST_DIR}/Steam-overlay-abusion/*.h)
FILE(GLOB_RECURSE RENDERING_SOURCES CONFIGURE_DEPENDS ${CMAKE_CURRENT_LIST_DIR}/Steam-overlay-abusion/Rendering/*.cpp)
FILE(GLOB_RECURSE RENDERING_HEADERS CONFIGURE_DEPENDS ${CMAKE_CURRENT_LIST_DIR}/Steam-overlay-abusion/Rendering/*.h)

#imgui
include_directories(${CMAKE_CURRENT_LIST_DIR}/imgui)
FILE(GLOB_RECURSE IMGUI_SOURCES CONFIGURE_DEPENDS ${CMAKE_CURRENT_LIST_DIR}/imgui/*.cpp)
FILE(GLOB_RECURSE IMGUI_HEADERS CONFIGURE_DEPENDS ${CMAKE_CURRENT_LIST_DIR}/imgui/*.h)

#Minhook
include_directories(${CMAKE_CURRENT_LIST_DIR}/minhook/include)
FILE(GLOB_RECURSE MINHOOK_SOURCES CONFIGURE_DEPENDS ${CMAKE_CURRENT_LIST_DIR}/minhook/src/*.c)
FILE(GLOB_RECURSE MINHOOK_HEADERS CONFIGURE_DEPENDS ${CMAKE_CURRENT_LIST_DIR}/minhook/src/*.h)
FILE(GLOB_RECURSE MINHOOK_HDE_SOURCES CONFIGURE_DEPENDS ${CMAKE_CURRENT_LIST_DIR}/minhook/src/hde/*.c)
FILE(GLOB_RECURSE MINHOOK_HDE_HEADERS CONFIGURE_DEPENDS ${CMAKE_CURRENT_LIST_DIR}/minhook/src/hde/*.h)

add_library(${PROJECT_NAME} SHARED
        ${MAIN_SOURCES} ${MAIN_HEADERS}
        ${RENDERING_SOURCES} ${RENDERING_HEADERS}
        ${MINHOOK_SOURCES} ${MINHOOK_HEADERS} ${MINHOOK_HDE_SOURCES} ${MINHOOK_HDE_HEADERS}
        ${IMGUI_SOURCES} ${IMGUI_HEADERS}
        )

target_link_libraries(${PROJECT_NAME} d3d9 d3dx9)